@@ -43,6 +43,7 @@ private slots:
     void GetSegmentPoints();
     void GetSegmentPoints_issue412();
     void GetSegmentPoints_TestPuzzle();
+    void GetSegmentPoints_NullSegment();
 };
 
 #endif // TST_VSPLINE_H
